[gd_scene load_steps=16 format=2]

[ext_resource path="res://Audio/531947__straget__the-rain-falls-against-the-parasol.wav" type="AudioStream" id=1]
[ext_resource path="res://Scenes/Rain.tscn" type="PackedScene" id=2]
[ext_resource path="res://Audio/edit_Jam1.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/NPCScrpits/NPC52.gd" type="Script" id=4]
[ext_resource path="res://Images/water_waves.png" type="Texture" id=5]
[ext_resource path="res://Scripts/NPCScrpits/NPC5.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Objects/NPC.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Objects/TheDie.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Objects/CatFly.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Rooms/RoomFinal5.gd" type="Script" id=10]
[ext_resource path="res://Audio/Jam1_edit.wav" type="AudioStream" id=11]
[ext_resource path="res://Scenes/Rooms/Room5.tscn" type="PackedScene" id=13]

[sub_resource type="Environment" id=1]
resource_local_to_scene = true
background_mode = 1
background_color = Color( 0.305882, 0.305882, 0.305882, 1 )
ambient_light_color = Color( 0.741176, 0.741176, 0.741176, 1 )
fog_enabled = true
fog_color = Color( 0.305882, 0.305882, 0.305882, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_depth_begin = 1.0
fog_depth_end = 50.0
fog_depth_curve = 0.241484
fog_transmit_curve = 1.27456
fog_height_min = -102.6
fog_height_max = -256.4
fog_height_curve = 0.0398301
tonemap_mode = 2
dof_blur_far_enabled = true
dof_blur_far_distance = 5.0
dof_blur_far_transition = 3.82
dof_blur_far_amount = 0.09
dof_blur_far_quality = 0
dof_blur_near_quality = 0
glow_intensity = 0.57
glow_bloom = 0.2
glow_hdr_luminance_cap = 12.17
glow_hdr_scale = 1.38
adjustment_enabled = true

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
params_diffuse_mode = 1
params_cull_mode = 2
albedo_color = Color( 1, 1, 1, 0.356863 )
albedo_texture = ExtResource( 5 )
uv1_scale = Vector3( 9, 9, 5 )

[sub_resource type="QuadMesh" id=3]
material = SubResource( 4 )
size = Vector2( 30, 30 )

[node name="RoomFinal5" type="Spatial"]
script = ExtResource( 10 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="NPC0" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20.2, 0 )

[node name="Spatial" type="Spatial" parent="NPC0"]
script = ExtResource( 6 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -19.5, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = null

[node name="TheDie" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.61757, -19.9376, 5.96514 )

[node name="Room5" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00984812, -0.0394262, -0.0315386 )

[node name="Rain2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28, 80.7739, -31 )

[node name="Rain" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 81.2447, -31 )

[node name="Rain3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28, 80.7739, 30 )

[node name="Rain4" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 81.2447, 30 )

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 54.3013, 14.4151, -54.3916 )
stream = ExtResource( 3 )
attenuation_model = 1
unit_db = 80.0
max_db = 6.0
max_distance = 80.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 54.3013, 14.4151, 54.3044 )
stream = ExtResource( 3 )
attenuation_model = 1
unit_db = 80.0
max_db = 6.0
max_distance = 80.0

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -54.2427, 14.4151, -54.3916 )
stream = ExtResource( 3 )
attenuation_model = 1
unit_db = 80.0
max_db = 6.0
max_distance = 80.0

[node name="AudioStreamPlayer3D4" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -54.2427, 14.4151, 54.3044 )
stream = ExtResource( 3 )
attenuation_model = 1
unit_db = 80.0
max_db = 6.0
max_distance = 80.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 4.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -1.951
autoplay = true

[node name="CatFly" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -53.4, 33, -53.4098 )

[node name="TheDie2" parent="." instance=ExtResource( 8 )]
transform = Transform( 0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, -3.1, 40.6, 3.4 )

[node name="NPC1" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.80136, 40.5, -0.718247 )

[node name="Spatial" type="Spatial" parent="NPC1"]
script = ExtResource( 4 )
